chore(engine): Use DatatypeConverter instead of apacheCommons
Related to CAM-8365, PR #281